--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "velocity-animate": "^1.5.2",
+    "velocity-react": "^1.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
